--- a/packages/api-page-builder/package.json
+++ b/packages/api-page-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/api-page-builder",
-  "version": "3.1.7-next.0",
+  "version": "3.1.7",
   "main": "index.js",
   "repository": {
     "type": "git",
