--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -27,12 +27,6 @@
       "@webiny/api-page-builder": ["./packages/api-page-builder/src"],
       "@webiny/api-i18n/*": ["./packages/api-i18n/src/*"],
       "@webiny/api-i18n": ["./packages/api-i18n/src"],
-      "@webiny/api-plugin-create-apollo-handler": [
-        "./packages/api-plugin-create-apollo-handler/src"
-      ],
-      "@webiny/api-plugin-create-apollo-handler/*": [
-        "./packages/api-plugin-create-apollo-handler/src/*"
-      ],
       "@webiny/api-plugin-commodo-db-proxy/*": ["./packages/api-plugin-commodo-db-proxy/src/*"],
       "@webiny/api-plugin-commodo-db-proxy": ["./packages/api-plugin-commodo-db-proxy/src"],
       "@webiny/api-plugin-commodo-mongodb/*": ["./packages/api-plugin-commodo-mongodb/src/*"],
@@ -107,6 +101,8 @@
       "@webiny/storybook-utils/*": ["./packages/storybook-utils/src/*"],
       "@webiny/react-router": ["./packages/react-router/src"],
       "@webiny/react-router/*": ["./packages/react-router/src/*"],
+      "@webiny/serverless-files": ["./packages/serverless-files/src"],
+      "@webiny/serverless-files/*": ["./packages/serverless-files/src/*"],
       "@webiny/service-i18n": ["./packages/service-i18n/src"],
       "@webiny/service-i18n/*": ["./packages/service-i18n/src/*"],
       "@webiny/service-headless-cms": ["./packages/service-headless-cms/src"],
@@ -117,16 +113,26 @@
       "@webiny/validation/*": ["./packages/validation/src/*"],
       "@webiny/ui/*": ["./packages/ui/src/*"]
     },
-    "typeRoots": ["./typings", "node_modules/@types", "@types/testing-library__cypress"]
+    "typeRoots": ["./typings", "./node_modules/@types", "@types/testing-library__cypress"]
   },
   "exclude": [
     "node_modules",
     "**/__tests__/**",
     "dist",
     "**jest**",
-    "./packages/serverless**",
     "./packages/cli",
-    "./packages/project-utils",
+    "./packages/serverless-api-gateway",
+    "./packages/serverless-apollo-service",
+    "./packages/serverless-app",
+    "./packages/serverless-aws-api-gateway",
+    "./packages/serverless-aws-cloudfront",
+    "./packages/serverless-aws-cognito-user-pool",
+    "./packages/serverless-aws-lambda",
+    "./packages/serverless-aws-s3",
+    "./packages/serverless-aws-s3-object",
+    "./packages/serverless-component",
+    "./packages/serverless-db-proxy",
+    "./packages/serverless-function",
     "**resources.js"
   ]
 }
