--- a/packages/create-webiny-project/package.json
+++ b/packages/create-webiny-project/package.json
@@ -20,8 +20,9 @@
     "chalk": "^4.0.0",
     "envinfo": "^7.5.0",
     "execa": "^4.0.0",
-    "fs-extra": "^9.0.0",
     "fast-glob": "^3.2.2",
+    "fs-extra": "^9.0.0",
+    "ora": "^4.0.4",
     "os": "^0.1.1",
     "validate-npm-package-name": "^3.0.0",
     "yargs": "^15.3.1"
