--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "fsevents": "^2.0.7"
   },
   "scripts": {
+    "eslint": "eslint \"packages/**/*.{ts,tsx}\" --quiet",
     "build": "lerna run build --scope=@webiny/* --stream",
     "build:components": "lerna run build --scope=@webiny/serverless-* --stream",
     "build:apps": "lerna run build --scope=@webiny/app* --stream",
@@ -128,9 +129,7 @@
     "setup-repo": "node scripts/setupRepo",
     "test": "jest --config jest.config.js",
     "validate-packages": "node scripts/validatePackages.js",
-    "webiny-ui-build-storybook": "cd packages/ui && cross-env OUT=../../netlify-static yarn build-storybook",
-    "wby:fns": "cross-env NODE_ENV=development sls offline start --stage=local",
-    "wby:fns:inspect": "yarn wby:fns --inspect=9001"
+    "webiny-ui-build-storybook": "cd packages/ui && cross-env OUT=../../netlify-static yarn build-storybook"
   },
   "husky": {
     "hooks": {
