--- a/packages/project-utils/package.json
+++ b/packages/project-utils/package.json
@@ -14,6 +14,10 @@
   ],
   "dependencies": {
     "@babel/core": "7.7.4",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@hot-loader/react-dom": "^16.13.0",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
