--- a/sample-project/api/files/download/package.json
+++ b/sample-project/api/files/download/package.json
@@ -5,7 +5,7 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/handler": "^0.1.0",
-    "@webiny/serverless-files": "^3.1.0"
+    "@webiny/handler": "^4.0.0-beta.1",
+    "@webiny/serverless-files": "^4.0.0-beta.1"
   }
 }
