--- a/sample-project/api/security/graphql/package.json
+++ b/sample-project/api/security/graphql/package.json
@@ -5,9 +5,9 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/handler": "^0.1.0",
-    "@webiny/handler-apollo-server": "^0.1.0",
-    "@webiny/api-plugin-commodo-db-proxy": "^2.0.4",
-    "@webiny/api-security": "^3.1.0"
+    "@webiny/handler": "^4.0.0-beta.1",
+    "@webiny/handler-apollo-server": "^4.0.0-beta.1",
+    "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.1",
+    "@webiny/api-security": "^4.0.0-beta.1"
   }
 }
