--- a/sample-project/apps/admin/package.json
+++ b/sample-project/apps/admin/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@webiny/app-template-admin-full": "^1.0.0",
+    "@webiny/app-template-admin-full": "^4.0.0-beta.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
-    "@webiny/cli": "^3.2.8",
-    "@webiny/project-utils": "^1.0.2"
+    "@webiny/cli": "^4.0.0-beta.1",
+    "@webiny/project-utils": "^4.0.0-beta.1"
   },
   "scripts": {
     "analyze": "source-map-explorer build/static/js/main.*",
