--- a/sample-project/apps/cmsOnly/package.json
+++ b/sample-project/apps/cmsOnly/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@webiny/app-template-admin": "^1.0.0",
-    "@webiny/app-headless-cms": "^2.0.8",
+    "@webiny/app-template-admin": "^4.0.0-beta.1",
+    "@webiny/app-headless-cms": "^4.0.0-beta.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
-    "@webiny/cli": "^3.2.8",
-    "@webiny/project-utils": "^1.0.2"
+    "@webiny/cli": "^4.0.0-beta.1",
+    "@webiny/project-utils": "^4.0.0-beta.1"
   },
   "scripts": {
     "start": "env-cmd -r .env.json -e default,local webiny run start",
