--- a/sample-project/apps/site/package.json
+++ b/sample-project/apps/site/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@webiny/app-template-site": "^1.0.0",
+    "@webiny/app-template-site": "^4.0.0-beta.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
@@ -12,10 +12,10 @@
   },
   "scripts": {
     "analyze": "source-map-explorer build/static/js/main.*",
-    "build:dev":  "env-cmd -r .env.json -e default,dev webiny run build",
+    "build:dev": "env-cmd -r .env.json -e default,dev webiny run build",
     "build:prod": "env-cmd -r .env.json -e default,prod webiny run build",
-    "build:ssr:dev":  "env-cmd -r .env.json -e default,dev webiny run build-ssr",
-    "build:ssr:prod":  "env-cmd -r .env.json -e default,prod webiny run build-ssr",
+    "build:ssr:dev": "env-cmd -r .env.json -e default,dev webiny run build-ssr",
+    "build:ssr:prod": "env-cmd -r .env.json -e default,prod webiny run build-ssr",
     "start": "env-cmd -r .env.json -e default,local webiny run start"
   },
   "browserslist": {
