--- a/packages/api-plugin-commodo-nedb/package.json
+++ b/packages/api-plugin-commodo-nedb/package.json
@@ -21,7 +21,7 @@
 		"@babel/core": "^7.5.5",
 		"@babel/preset-env": "^7.5.5",
 		"@webiny/graphql": "^4.0.0-beta.1",
-		"@commodo/fields-storage-nedb": "",
+		"@commodo/fields-storage-nedb": "^2.0.0-next.16"
 	},
 	"publishConfig": {
 		"access": "public",
