--- a/packages/api-headless-cms/tsconfig.build.json
+++ b/packages/api-headless-cms/tsconfig.build.json
@@ -6,6 +6,7 @@
     "../graphql",
     "../api-i18n",
     "../api-plugin-commodo-db-proxy",
+    "../api-plugin-commodo-nedb",
     "../api-security",
     "../commodo",
     "../commodo-graphql",
@@ -23,6 +24,7 @@
     { "path": "../graphql/tsconfig.build.json" },
     { "path": "../api-i18n/tsconfig.build.json" },
     { "path": "../api-plugin-commodo-db-proxy/tsconfig.build.json" },
+    { "path": "../api-plugin-commodo-nedb/tsconfig.build.json" },
     { "path": "../api-security/tsconfig.build.json" },
     { "path": "../commodo-graphql/tsconfig.build.json" },
     { "path": "../handler/tsconfig.build.json" },
