--- a/packages/api-headless-cms/tsconfig.json
+++ b/packages/api-headless-cms/tsconfig.json
@@ -5,6 +5,7 @@
     { "path": "../graphql" },
     { "path": "../api-i18n" },
     { "path": "../api-plugin-commodo-db-proxy" },
+    { "path": "../api-plugin-commodo-nedb" },
     { "path": "../api-security" },
     { "path": "../commodo" },
     { "path": "../commodo-graphql" },
