--- a/packages/api-headless-cms/package.json
+++ b/packages/api-headless-cms/package.json
@@ -42,6 +42,7 @@
     "@shelf/jest-mongodb": "^1.1.3",
     "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.1",
     "@webiny/api-plugin-commodo-mongodb": "^4.0.0-beta.1",
+    "@webiny/api-plugin-commodo-nedb": "^4.0.0-beta.1",
     "apollo-graphql": "^0.4.1",
     "chalk": "^3.0.0",
     "graphql": "^14.6.0",
