--- a/packages/api-plugin-commodo-nedb/package.json
+++ b/packages/api-plugin-commodo-nedb/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@webiny/api-plugin-commodo-nedb",
-	"version": "4.0.0-beta.1",
+	"version": "4.0.0-beta.2",
 	"main": "index.js",
 	"license": "MIT",
 	"repository": {
@@ -20,8 +20,8 @@
 		"@babel/cli": "^7.5.5",
 		"@babel/core": "^7.5.5",
 		"@babel/preset-env": "^7.5.5",
-		"@webiny/graphql": "^4.0.0-beta.1",
-		"@commodo/fields-storage-nedb": "^2.0.0-next.16"
+		"@commodo/fields-storage-nedb": "^2.0.0-next.16",
+		"@webiny/graphql": "^4.0.0-beta.1"
 	},
 	"publishConfig": {
 		"access": "public",
