--- a/packages/app-i18n/package.json
+++ b/packages/app-i18n/package.json
@@ -33,7 +33,8 @@
     "react-apollo": "^3.1.3",
     "react-helmet": "^5.2.0",
     "slate": "^0.42.2",
-    "slate-react": "^0.19.3"
+    "slate-react": "^0.19.3",
+    "react-hotkeyz": "^1.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
