--- a/sample-project/api/cms/content/tsconfig.json
+++ b/sample-project/api/cms/content/tsconfig.json
@@ -4,6 +4,7 @@
     { "path": "../../../../packages/api-plugin-commodo-db-proxy" },
     { "path": "../../../../packages/api-headless-cms" },
     { "path": "../../../../packages/api-i18n" },
+    { "path": "../../../../packages/api-files" },
     { "path": "../../../../packages/api-security" },
     { "path": "../../../../packages/handler" }
   ]
