--- a/sample-project/api/cms/content/tsconfig.json
+++ b/sample-project/api/cms/content/tsconfig.json
@@ -5,6 +5,7 @@
     { "path": "../../../../packages/api-headless-cms" },
     { "path": "../../../../packages/api-i18n" },
     { "path": "../../../../packages/api-security" },
+    { "path": "../../../../packages/api-settings-manager" },
     { "path": "../../../../packages/handler" }
   ]
 }
