--- a/sample-project/api/formBuilder/package.json
+++ b/sample-project/api/formBuilder/package.json
@@ -9,6 +9,7 @@
     "@webiny/handler-apollo-server": "^4.0.0-beta.1",
     "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.1",
     "@webiny/api-security": "^4.0.0-beta.1",
+    "@webiny/api-settings-manager": "^4.0.0-beta.1",
     "@webiny/api-i18n": "^4.0.0-beta.1",
     "@webiny/api-form-builder": "^4.0.0-beta.1"
   }
