--- a/sample-project/api/security/graphql/tsconfig.json
+++ b/sample-project/api/security/graphql/tsconfig.json
@@ -3,6 +3,7 @@
   "references": [
     { "path": "../../../../packages/api-plugin-commodo-db-proxy" },
     { "path": "../../../../packages/api-security" },
+    { "path": "../../../../packages/api-settings-manager" },
     { "path": "../../../../packages/handler" },
     { "path": "../../../../packages/handler-apollo-server" }
   ]
