--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
       "**/inquirer/**",
       "**/mime/**",
       "**/@types/mocha",
-      "**/semver"
+      "**/semver",
+      "**/slate",
+      "**/slate-react"
     ]
   },
   "contributors": [
