--- a/packages/api-headless-cms/package.json
+++ b/packages/api-headless-cms/package.json
@@ -24,7 +24,7 @@
     "@webiny/handler": "^4.5.0",
     "@webiny/handler-apollo-server": "^4.5.0",
     "@webiny/validation": "^4.5.0",
-    "apollo-server-lambda": "^2.13.1",
+    "apollo-server-lambda": "2.15.1",
     "boolean": "^3.0.1",
     "fast-deep-equal": "^3.1.1",
     "fecha": "^4.0.0",
