--- a/packages/handler-apollo-server/package.json
+++ b/packages/handler-apollo-server/package.json
@@ -18,7 +18,7 @@
     "@webiny/graphql": "^4.5.0",
     "@webiny/handler": "^4.5.0",
     "@webiny/plugins": "^4.5.0",
-    "apollo-server-lambda": "^2.13.1",
+    "apollo-server-lambda": "2.15.1",
     "boolean": "^3.0.1",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1"
