--- a/.github/workflows/experimentalBuild.yml
+++ b/.github/workflows/experimentalBuild.yml
@@ -9,7 +9,7 @@ env:
 
 jobs:
   build-test-release:
-    name: Build & test
+    name: Build, test and release ("latest" tag)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
