--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
     "prettier": "prettier --config .prettierrc.js --write",
     "prettier:check": "prettier \"packages/**/src/**/*.{js,ts,tsx}\" --check --config .prettierrc.js",
     "setup-repo": "node scripts/setupRepo",
+    "setup-env-files": "node scripts/setupEnvFiles",
     "test": "jest --config jest.config.js",
     "validate-packages": "node scripts/validatePackages.js",
     "webiny-ui-build-storybook": "cd packages/ui && cross-env OUT=../../netlify-static yarn build-storybook"
