--- a/.github/workflows/ciBranchPush.yml
+++ b/.github/workflows/ciBranchPush.yml
@@ -6,6 +6,9 @@ on:
 
 env:
   NODE_OPTIONS: --max_old_space_size=4096
+  MONGODB_SERVER: {{ secrets.MONGODB_SERVER }}
+  AWS_ACCESS_KEY_ID: {{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: {{ secrets.AWS_SECRET_ACCESS_KEY }}
 
 jobs:
   build-test-release:
