--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "prettier:check": "prettier \"packages/**/src/**/*.{js,ts,tsx}\" --check --config .prettierrc.js",
     "setup-repo": "node scripts/setupRepo",
     "setup-env-files": "node scripts/setupEnvFiles",
+    "setup-cypress": "node scripts/setupCypress",
     "setup-env-files:ci": "node scripts/setupCiEnvFiles",
     "test": "jest --config jest.config.js",
     "validate-packages": "node scripts/validatePackages.js",
