--- a/.github/workflows/ciBranchPush.yml
+++ b/.github/workflows/ciBranchPush.yml
@@ -30,6 +30,11 @@ jobs:
       - name: Build packages
         run: yarn build
 
+      - uses: doitadrian/action-post-run@1.0.0
+        id: Remove cloud resources
+        with:
+          command: yarn webiny remove apps --env prod && yarn webiny remove api --env prod
+
       - name: Deploy API stack
         run: yarn webiny deploy api --env prod
 
