--- a/packages/commodo/package.json
+++ b/packages/commodo/package.json
@@ -15,12 +15,12 @@
 	],
 	"license": "MIT",
 	"dependencies": {
-		"@commodo/fields": "^1.1.0",
-		"@commodo/fields-storage": "^2.0.0",
-		"@commodo/fields-storage-ref": "^1.1.0",
-		"@commodo/fields-storage-soft-delete": "^2.0.0",
-		"@commodo/hooks": "^1.1.0",
-		"@commodo/name": "^1.2.0",
+		"@commodo/fields": "^1.1.1-next.0",
+		"@commodo/fields-storage": "^2.0.1-next.0",
+		"@commodo/fields-storage-ref": "^1.1.1-next.0",
+		"@commodo/fields-storage-soft-delete": "^2.0.1-next.0",
+		"@commodo/hooks": "^1.1.1-next.0",
+		"@commodo/name": "^1.2.1-next.0",
 		"commodo-fields-date": "^1.0.3",
 		"commodo-fields-float": "^1.0.2",
 		"commodo-fields-int": "^1.0.1",
