--- a/api/security/permissionsManager/package.json
+++ b/api/security/permissionsManager/package.json
@@ -5,10 +5,10 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/handler": "^4.9.0",
-    "@webiny/api-plugin-commodo-db-proxy": "^4.9.0",
+    "@webiny/handler": "^4.11.0-beta.1",
+    "@webiny/api-plugin-commodo-db-proxy": "^4.11.0-beta.1",
     "@webiny/api-security-permissions-manager": "^4.11.0-beta.1",
     "@webiny/api-security-user-management": "^4.11.0-beta.1",
-    "@webiny/project-utils": "^4.9.0"
+    "@webiny/project-utils": "^4.11.0-beta.1"
   }
 }
